--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "net.linyz.site.sissyuniv"
         minSdkVersion 26
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 118
+        versionName "1.0.118b"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
