replace target with requestLegacyExternalStorage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,13 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    android.applicationVariants.all {
+        variant ->
+            variant.outputs.all {
+                // 此处指定生成的apk文件名
+                outputFileName = "net.linyz.site.sissyuniv-v1.0.121b_rev121_${new Date().format('yyyy-MM-dd', TimeZone.getTimeZone('UTC'))}.apk"
+            }
+    }
     buildTypes {
         debug {
             minifyEnabled false
